unmodifiable list fix